# meetups

./: README.md
2016-05-23-Double-Feature/: Project-in-Fsharp-Ocaml-Haskell.org  README.md
2016-05-23-Double-Feature/what-why-transformers/: README.md  what-why-transformers.cabal
2016-05-23-Double-Feature/what-why-transformers/app/: Bare.hs  Mtl.hs  Transformers.hs
2016-05-23-Double-Feature/what-why-transformers/slides/: index.html  slides.md
2016-05-23-Double-Feature/what-why-transformers/src/: Common.hs  E01_Bare.hs  E02_Transformers.hs  E03_Mtl.hs
2016-07-25-Zippers/: README.md
2016-07-25-Zippers/zippers/: LICENSE  README.md  stack.yaml  zipper.cabal
2016-07-25-Zippers/zippers/src/: Main.hs
