name:                zipper
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
license:             ISC
license-file:        LICENSE
author:              Jonathan Curran
maintainer:          jonathan@curran.in
copyright:           2016 Jonathan Curran
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable zipper
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty-tree
